# gptp

./: .gitignore  ADMIN_EXECUTION_SUCCESS_REPORT.md  ADMIN_TASK_FIX_COMPLETE.md  ANNOUNCE_INTERVAL_SIGNALING_IMPLEMENTATION.md  ANNOUNCE_MESSAGE_ANALYSIS.md  ASCAPABLE_PROGRESS_LOGGING.md  AUTOMOTIVE_AVB_SPEC_ADAPTATION.md  AUTOMOTIVE_PROFILE_ADAPTATION_COMPLETE.md  AUTOMOTIVE_PROFILE_ANALYSIS.md  AUTOMOTIVE_PROFILE_FINAL_STATUS.md  AVNU_MILAN_CROSS_REFERENCE.md  CLOCK_PARAMETER_VALIDATION.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_test.txt  DEPLOYMENT_GUIDE.md  DIRECT_NIC_DEBUG_GUIDE.md  ENHANCED_SOFTWARE_TIMESTAMPING_IMPLEMENTATION.md  ETHER_PORT_PAL_MIGRATION_COMPLETE.md  FINAL_IMPLEMENTATION_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PAL_MIGRATION_SUCCESS_REPORT.md  FINAL_SUCCESS_STATUS.md  GPTP_PROFILE_IMPLEMENTATION_SUMMARY.md  HIVE_EXPORT_GRANDMASTER_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  INI_PARSER_FIX_COMPLETE.md  INTEL_I210_ANALYSIS_AND_SOLUTION.md  INTEL_I210_FINAL_REPORT.md  LATEST_LOG_ANALYSIS_SUCCESS.md  LIVE_ANALYSIS_SUCCESS.md  LIVE_TESTING_GUIDE.md  MILAN_ASCAPABLE_COMPLIANCE_IMPLEMENTED.md  MILAN_BASELINE_INTEROPERABILITY_IMPLEMENTATION.md  MILAN_IMPLEMENTATION_COMPLETE.md  MILAN_PROFILE_IMPLEMENTATION_SUMMARY.md  MILAN_PROFILE_REQUIREMENTS.md  MILAN_PROFILE_TEST_GUIDE.md  OID_FAILURE_TRACKING_SUMMARY.md  PACKET_RECEPTION_DIAGNOSTIC.md  (+65 more)
.github/workflows/: DAW01  DAW01.yml  c-cpp.yml  configure-intel-ptp.yml
common/: avbts_clock.hpp  common_port.cpp  common_port.hpp  common_port_fixed.hpp  common_tstamper.hpp  ether_port.cpp  ether_port.hpp  gptp_cfg.cpp  gptp_cfg.hpp  gptp_clock_quality.cpp  gptp_clock_quality.hpp  gptp_clock_quality_config.cpp  gptp_clock_quality_config.cpp.disabled  gptp_clock_quality_config.hpp  gptp_log.cpp  gptp_log.hpp  gptp_profile.cpp  gptp_profile.hpp  ieee1588clock.cpp  milan_profile.cpp  milan_profile.hpp  profile_interface.hpp  profile_usage_example.cpp.example  ptp_message.cpp  wireless_port.cpp
doc/: CMakeLists.txt
linux/src/: daemon_cl.cpp  linux_hal_common.cpp  linux_hal_common.hpp  linux_hal_generic.cpp
scripts/: configure_intel_ptp.bat  configure_intel_ptp.ps1
windows/daemon_cl/: ARCHITECTURE_ANALYSIS.md  BUILD_FIX_SUMMARY.md  CROSS_PLATFORM_COMPARISON.md  CROSS_TIMESTAMPING_IMPLEMENTATION.md  CROSS_TIMESTAMPING_INTEGRATION_STATUS.md  CROSS_TIMESTAMPING_STATUS.md  DRIVER_INFO_REQUIREMENTS.md  EVENT_DRIVEN_LINK_MONITORING.md  Extract-IntelDriverInfo.ps1  IMPLEMENTATION_STATUS.md  INTEL_ANALYSIS_INTEGRATION_STATUS.md  INTEL_DRIVER_ANALYSIS_GUIDE.md  INTEL_DRIVER_EXTRACTION_SCRIPT.md  INTEL_DRIVER_EXTRACTION_SUMMARY.md  INTEL_DRIVER_INTEGRATION_GUIDE.md  INTEL_PTP_HARDWARE_TIMESTAMPING_GUIDE.md  NPCAP_MIGRATION_COMPLETED.md  NPCAP_MIGRATION_PLAN.md  README_MODULAR_REFACTOR.md  SESSION_COMPLETION_SUMMARY.md  WINDOWS_WATCHDOG_COMPLETE.md  WINDOWS_WATCHDOG_IMPLEMENTATION.md  analyze_intel_drivers.bat  daemon_cl.cpp  intel_hal_vendor_extensions.cpp  intel_hal_vendor_extensions.hpp  intel_i225_detection.ps1  intel_wireless.hpp  packet.cpp  packet.hpp  test_crosststamp.cpp  test_crosststamp.cpp.disabled  watchdog.cpp  watchdog.hpp  windows_crosststamp.cpp  windows_crosststamp.hpp  windows_crosststamp_simple.cpp  windows_crosststamp_simple.hpp  windows_driver_info.cpp  windows_driver_info.hpp  (+12 more)
windows/daemon_cl/analysis_results/: intel_analysis_20252906_235934.json  intel_analysis_20252906_235934_mapping.cpp
windows/named_pipe_test/: CMakeLists.txt
